<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ElectoralCalculator</string>
    <string name="txtvwParty">Party</string>
    <string name="txtvwVotes">Votes</string>
    <string name="buttonAddParty">Add party</string>
    <string name="buttonContinue">Continue</string>
    <string name="txtvwSeats">Seats</string>
    <string name="buttonCalculate">Calculate</string>
    <string name="txtvwPartyList">Party list:</string>
	<string name="toastPartyVotesEmpty">The name of the party and the number of votes are required values!</string>
	<string name="toastPartyEmpty">The name of the party is a required value!</string>
	<string name="toastVotesEmpty">The number of votes is a required value!</string>
	<string name="toastSeatsEmpty">The number of seats is a required value!</string>
	<string name="toastVotesMapEmpty">There should be at least one party!</string>
	<string name="twoDecimalFormat">#.##</string>
	<string name="spinnerMethods_prompt">Choose a method</string>
	<string-array name="methods_array">
        <item>D\'Hondt</item>
        <item>Sainte-Laguë</item>
        <item>Modified Sainte-Laguë</item>
        <item>Imperiali</item>
        <item>Hare quota</item>
        <item>Droop quota</item>
    </string-array>
	<string name="about_title">About Electoral Calculator</string>
	<string name="about_text">\
	Electoral Calculator for Android is free software\n\n
	Author: Asier Iturralde Sarasola\n
	Web: https://launchpad.net/electoral-calculator-for-android\n
	License: GNU GPL version 3
	</string>
	<string name="about_label">About&#8230;</string>
	<string name="addparty_title">Add party</string>
	<string name="accept">Accept</string>
	<string name="cancel">Cancel</string>
	<string name="toastPartyListEmpty">The list of parties is empty</string>
	<string name="settings_label">Settings&#8230;</string>
	<string name="default_method_label">Default method</string>
	<string name="default_method_summary">Select the method used by default</string>
	<string name="buttonClearList">Clear list</string>
	<string name="edit">Edit</string>
	<string name="remove">Remove</string>
	<string name="removeedit_title">What do you want to do?</string>
	<string name="editparty_title">Edit party</string>
	<string name="party_header">Party</string>
	<string name="votes_header">Votes</string>
	<string name="percents_header">Percent</string>
	<string name="seats_header">Seats</string>
	<string name="next_seat_header">Next seat</string>
	<string name="results">Results</string>
	<string name="MSLFD_pref_summary">Enter the value of the first divisor</string>
	<string name="modified_sainte_laguë">Modified Sainte-Laguë</string>
</resources>