<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<TextView
        android:id="@+id/txtvwSeats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvwSeats" />

    <EditText
        android:id="@+id/editSeats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinnerMethods"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinnerMethods_prompt" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCalculate" />

    <TextView
        android:id="@+id/txtvwPartyList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvwPartyList" />

    <ListView
        android:id="@+id/listParties"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>