<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonAddParty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddParty" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonContinue" />

    <TextView
        android:id="@+id/txtvwPartyList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvwPartyList" />

    <ListView
        android:id="@+id/listParties"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>
</LinearLayout>