<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="6dip" >
    <TextView
        android:id="@+id/txtvwParty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvwParty" />

    <EditText
        android:id="@+id/editParty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtvwVotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvwVotes" />

    <EditText
        android:id="@+id/editVotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:background="@color/background"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal" >
    
        <Button
	        android:id="@+id/buttonAddNewParty"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/accept" />
	
	    <Button
	        android:id="@+id/buttonCancelAddNewParty"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>